# rust-modsecurity

./: .editorconfig  Cargo.toml  LICENSE-MIT  README.md  README.tpl  build.rs  gen-bindings.sh  lsan-suppressions.txt  wrapper.h
.github/: check.yml
.github/workflows/: check.yml  safety.yml  test.yml
examples/: basic_rules.conf  block-admin-requests.rs  disruptive-logging.rs  non-disruptive-logging.rs  test.rs
modsecurity-sys/: Cargo.toml  README.md  README.tpl  build.rs
modsecurity-sys/src/: bindings.rs  lib.rs
src/: bindings.rs  error.rs  intervention.rs  lib.rs  msc.rs  rules.rs  transaction.rs
