[package]
name = "modsecurity-sys"
version = "0.1.0"
authors = ["Rohan Krishnaswamy <rohan@fastmail.us>"]
repository = "https://github.com/rkrishn7/modsecurity-sys"
keywords = ["modsecurity", "security", "waf"]
edition = "2021"

include = ["LICENSE*", "/README.md", "build.rs", "src/*.rs", "src/*.c"]

[build-dependencies]
bindgen = "0.69.4"
cc = "1.0.18"
pkg-config = "0.3.9"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
