[package]
name = "modsecurity"
version = "0.1.0"
authors = ["Rohan Krishnaswamy <rohan@fastmail.us>"]
repository.workspace = true
readme = "README.md"
license.workspace = true
description = "A high-level Rust interface to libmodsecurity"
keywords = ["modsecurity", "security", "waf"]
edition = "2021"
rust-version.workspace = true


[workspace]
package.repository = "https://github.com/rkrishn7/rust-modsecurity"
package.license = "Apache-2.0"
package.rust-version = "1.78.0"

[dependencies]
modsecurity-sys = { path = "modsecurity-sys", version = "0.1.1-alpha.1" }
